# hb-installer

./: .gitignore  CMakeLists.txt  Readme.adoc  Switch_Homebrew_Installer.ini  build.bat  hb_installer.ini  hello_world.cpp  installer.h
assets/tools/: essentials.json  homebrew.json  overclocking.json  overlays.json  payloads.json  sysmodules.json
assets/tutorials/: modchips.json  rcm.json  start.json
